[gd_scene load_steps=4 format=3 uid="uid://bh5ajdq42oxua"]

[ext_resource type="Script" uid="uid://dujrdcmocgwra" path="res://scripts/game_over_screen.gd" id="1_61w2s"]
[ext_resource type="Texture2D" uid="uid://cajkngl30y7rs" path="res://assets/space invaders game arena.png" id="1_iwahs"]
[ext_resource type="AudioStream" uid="uid://clruu8sw3qddb" path="res://assets/space invaders click sound.wav" id="3_jw6e5"]

[node name="GameOverScreen" type="Node2D"]
script = ExtResource("1_61w2s")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(480, 270)
texture = ExtResource("1_iwahs")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 126.0
offset_top = 100.0
offset_right = 834.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Your Score" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 126.0
offset_top = 189.0
offset_right = 483.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Your Score:"
vertical_alignment = 1
autowrap_mode = 2

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 490.0
offset_top = 189.0
offset_right = 847.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "0"
vertical_alignment = 1
autowrap_mode = 2

[node name="High Score" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 126.0
offset_top = 289.0
offset_right = 483.0
offset_bottom = 382.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Your Highscore:"
vertical_alignment = 1
autowrap_mode = 2

[node name="HighscoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 490.0
offset_top = 289.0
offset_right = 847.0
offset_bottom = 382.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "0"
vertical_alignment = 1
autowrap_mode = 2

[node name="RestartButton" type="Button" parent="."]
offset_left = 448.0
offset_top = 416.0
offset_right = 513.0
offset_bottom = 447.0
text = "Restart"

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 432.0
offset_top = 480.0
offset_right = 528.0
offset_bottom = 511.0
text = "Main Menu"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jw6e5")

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
